--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,13 @@ data/*/*.tsv
 data/*/*.zip
 features/*.feather
 features/importances/*.png
+
+### JupyterNotebook ###
+.ipynb_checkpoints
+*/.ipynb_checkpoints/*
+
+### macOS ###
+# General
+.DS_Store
+.AppleDouble
+.LSOverride
